--- a/basic-app-archetype/pom.xml
+++ b/basic-app-archetype/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>com.kos.archetypes</groupId>
   <artifactId>basic-app</artifactId>
-  <version>1.0</version>
+  <version>0.0.0-SNAPSHOT</version>
   <packaging>maven-archetype</packaging>
 
   <name>basic-app-archetype</name>
