--- a/multi-module-archetype/pom.xml
+++ b/multi-module-archetype/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>com.kos.archetypes</groupId>
   <artifactId>multi-module</artifactId>
-  <version>1.0</version>
+  <version>0.0.0-SNAPSHOT</version>
   <packaging>maven-archetype</packaging>
 
   <name>multi-module-archetype</name>
