--- a/app-archetype/pom.xml
+++ b/app-archetype/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.kos.archetypes</groupId>
-  <artifactId>basic-app</artifactId>
+  <artifactId>app</artifactId>
   <version>0.0.0-SNAPSHOT</version>
   <packaging>maven-archetype</packaging>
 
