--- a/multi-module-archetype/src/main/resources/archetype-resources/data/pom.xml
+++ b/multi-module-archetype/src/main/resources/archetype-resources/data/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>${groupId}</groupId>
         <artifactId>${rootArtifactId}</artifactId>
-        <version>${version}</version>
+        <version>0.0.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>${rootArtifactId}-data</artifactId>
