--- a/sdk-app-archetype/src/main/resources/archetype-resources/app/pom.xml
+++ b/sdk-app-archetype/src/main/resources/archetype-resources/app/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>${groupId}</groupId>
         <artifactId>${rootArtifactId}</artifactId>
-        <version>${version}</version>
+        <version>0.0.0-SNAPSHOT</version>
     </parent>
 
     <!-- ====== Basics =============================================================== -->
@@ -20,7 +20,7 @@
         <dependency>
             <groupId>${groupId}</groupId>
             <artifactId>${rootArtifactId}.core</artifactId>
-            <version>${version}</version>
+            <version>0.0.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.kosdev.kos.sdk.api</groupId>
