--- a/sdk-app-archetype/src/main/resources/archetype-resources/sdk/pom.xml
+++ b/sdk-app-archetype/src/main/resources/archetype-resources/sdk/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>${groupId}</groupId>
         <artifactId>${rootArtifactId}</artifactId>
-        <version>${version}</version>
+        <version>0.0.0-SNAPSHOT</version>
     </parent>
 
     <!-- ====== Basics =============================================================== -->
