--- a/system-app-archetype/src/main/resources/archetype-resources/pom.xml
+++ b/system-app-archetype/src/main/resources/archetype-resources/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>${groupId}</groupId>
     <artifactId>${artifactId}</artifactId>
-    <version>${version}</version>
+    <version>0.0.0-SNAPSHOT</version>
 
     <properties>
         <kos.version>0.0.0-SNAPSHOT</kos.version>
@@ -145,9 +145,8 @@
 
     <repositories>
         <repository>
-            <id>kosdevcode</id>
-            <name>kOS Code Repository</name>
-            <url>https://maven.pkg.github.com/kosdev-code/kos-maven</url>
+            <id>kos.public</id>
+            <url>https://kondra.mycloudrepo.io/public/repositories/kos-public</url>
             <releases>
                 <enabled>true</enabled>
                 <updatePolicy>daily</updatePolicy>
@@ -163,9 +162,8 @@
 
     <pluginRepositories>
         <pluginRepository>
-            <id>kosdevcode</id>
-            <name>kOS Plugin Repository</name>
-            <url>https://maven.pkg.github.com/kosdev-code/kos-maven</url>
+            <id>kos.public</id>
+            <url>https://kondra.mycloudrepo.io/public/repositories/kos-public</url>
             <releases>
                 <enabled>true</enabled>
                 <updatePolicy>daily</updatePolicy>
