--- a/sdk-app-archetype/src/main/resources/archetype-resources/pom.xml
+++ b/sdk-app-archetype/src/main/resources/archetype-resources/pom.xml
@@ -7,7 +7,7 @@
     <groupId>${groupId}</groupId>
     <artifactId>${artifactId}</artifactId>
     <name>${artifactId}</name>
-    <version>0.0.0-SNAPSHOT</version>
+    <version>${version}</version>
     <packaging>pom</packaging>
 
     <description>${artifactId}</description>
@@ -26,6 +26,7 @@
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
 
+        <maven-assembly-plugin.version>3.6.0</maven-assembly-plugin.version>
         <lombok.version>1.18.36</lombok.version>
     </properties>
 
