--- a/system-app-archetype/src/main/resources/archetype-resources/pom.xml
+++ b/system-app-archetype/src/main/resources/archetype-resources/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>${groupId}</groupId>
     <artifactId>${artifactId}</artifactId>
-    <version>0.0.0-SNAPSHOT</version>
+    <version>${version}</version>
 
     <properties>
         <kos.version>0.0.0-SNAPSHOT</kos.version>
