--- a/app-archetype/src/main/resources/archetype-resources/pom.xml
+++ b/app-archetype/src/main/resources/archetype-resources/pom.xml
@@ -15,6 +15,10 @@
 
         <java.version>17</java.version>
         <maven.compiler.release>${java.version}</maven.compiler.release>
+
+        <!-- Specify encoding so that build is not platform dependent -->
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     </properties>
 
     <dependencyManagement>
