--- a/multi-module-archetype/src/main/resources/archetype-resources/pom.xml
+++ b/multi-module-archetype/src/main/resources/archetype-resources/pom.xml
@@ -18,6 +18,9 @@
         <maven.compiler.release>${java.version}</maven.compiler.release>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
+        <!-- Specify encoding so that build is not platform dependent -->
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     </properties>
 
     <dependencyManagement>
